--- a/styles.css
+++ b/styles.css
@@ -70,14 +70,15 @@ footer h1 {
     width: 60%;
     height: 100%;
 
+
 }
 
-.up
+#up
 {
     width: 100%;
     height: 80%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     background-color: gray;
 }
@@ -120,8 +121,7 @@ footer h1 {
     width: 100%;
     height: 80%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+
     background-color: #FDEADA;
 }
 
@@ -129,11 +129,15 @@ footer h1 {
 {
     width: 20%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #FDEADA;
 }
 
-.rightside p
+.downblock p
 {
+    width: 100%;
     margin: 30px 30px 0 30px;
 }
 
